<resources>
    <string name="app_name">Inventario Esopo</string>
    <string name="btnProduct">Productos</string>
    <string name="btnVentas">Ventas</string>
    <string name="activity_productos">Productos</string>
    <string name="title_activity_add_producto">Añadir Producto</string>
    <string name="idProd">ID del Producto</string>
    <string name="nombreProd">Nombre</string>
    <string name="precioProd">Precio</string>
    <string name="modeloProd">Modelo</string>
    <string name="descripcionProd">Descripción</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
